--- a/css/style.css
+++ b/css/style.css
@@ -355,6 +355,7 @@ Header & Menu CSS
 	padding-top: 60px;
 	padding-left: 40px;
 	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
+	overflow-wrap:
 }
 #main-menu a {
 	color: #707070;
@@ -476,138 +477,7 @@ For easy editing (the main Nivo CSS is in nivo-theme.css)
 	bottom: 20px;
 	left: 160px;
 }
-/******************************************************************
-IMG Hovers
-******************************************************************/
 
-.recent-summary img:hover {
-	-moz-box-shadow: 0px 0px 5px #999;
-	-webkit-box-shadow: 0px 0px 5px #999;
-	box-shadow: 0px 0px 5px #999;
-}
-.recent-gallery img:hover {
-	-moz-box-shadow: 0px 0px 5px #999;
-	-webkit-box-shadow: 0px 0px 5px #999;
-	box-shadow: 0px 0px 5px #999;
-}
-.about-item img:hover {
-	-moz-box-shadow: 0px 0px 5px #999;
-	-webkit-box-shadow: 0px 0px 5px #999;
-	box-shadow: 0px 0px 5px #999;
-}
-.blog-item img:hover {
-	-moz-box-shadow: 0px 0px 5px #999;
-	-webkit-box-shadow: 0px 0px 5px #999;
-	box-shadow: 0px 0px 5px #999;
-}
-.blog-item-single img:hover {
-	-moz-box-shadow: 0px 0px 5px #999;
-	-webkit-box-shadow: 0px 0px 5px #999;
-	box-shadow: 0px 0px 5px #999;
-}
-/******************************************************************
-Home Page CSS
-******************************************************************/
-
-#recent-posts-container {
-	width: 720px;
-	height: 200px;
-	margin-top: 60px;
-}
-#recent-projects-container {
-	width: 720px;
-	height: 200px;
-	margin-top: 60px;
-}
-.section-description {
-	float: left;
-	width: 110px;
-	height: 160px;
-	padding-right: 20px;
-	border-right: 1px;
-	border-style: solid;
-	border-color: #d8d8d8;
-}
-.recent-summary {
-	width: 600px;
-	display: inline;
-}
-.recent-item {
-	padding-left: 40px;
-	float: left;
-	width: 260px;
-}
-.recent-item-last {
-	float: right;
-	width: 250px;
-}
-.recent-summary p {
-	width: 250px;
-	text-align: left;
-	padding: 0px 0px 50px 0px;
-}
-.recent-summary h6 {
-	width: 250px;
-	font-weight: bold;
-	text-align: left;
-	padding: 5px 0px 0px 0px;
-}
-.item {
-	width:125px;
-	height:125px;
-	border:4px solid #222;
-	margin:5px 0px 5px 0px;
-	/* required to hide the image after resized */
-	overflow:hidden;
-	/* for child absolute position */
-	position:relative;
-	/* display div in line */
-	float:left;
-}
-#recent-text {
-	text-align: center;
-}
-#recent-text h5 {
-	padding-bottom: 0px;
-}
-.recent-gallery {
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	width: 720px;
-	margin-top: 40px;
-}
-#follow h1 {
-	text-align: center;
-	font-size: 22px;
-	padding-top: 100px;
-	clear: both;
-}
-#follow h3 {
-	text-align: center;
-	padding: 16px;
-}
-#follow p {
-	text-align: center;
-}
-#follow-twitter {
-	text-align: center;
-	width: 150px;
-	height: 80px;
-	display: block;
-	padding-top: 20px;
-	float: left;
-	padding-left: 170px;
-}
-#follow-mail {
-	text-align: center;
-	width: 150px;
-	height: 80px;
-	display: block;
-	padding-top: 20px;
-	float: right;
-	padding-right: 170px;
-}
 /******************************************************************
 About us CSS
 ******************************************************************/
@@ -623,421 +493,7 @@ About us CSS
 .team-text {
 	text-align: center;
 }
-/******************************************************************
-Portfolio CSS
-******************************************************************/
 
-#filter {
-	display: block;
-	height: 20px;
-	margin-left: 20px;
-	position: relative;
-	text-align: center;
-	width: 700px;
-}
-#filter:before, #filter:after {
-	height: 43px;
-	position: absolute;
-	top: 0;
-	width: 78px;
-	content: '';
-}
-#filter:before {
-	background-position: 0 -47px;
-	left: -78px;
-}
-#filter:after {
-	background-position: 0 0;
-	right: -78px;
-}
-#filter a {
-	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
-	font-size: 16px;
-	color: #666;
-	display: inline-block;
-	text-decoration: none;
-	height: 39px;
-	line-height: 37px;
-	padding: 0 15px;
-}
-#filter a:hover {
-	text-decoration:none;
-}
-#filter a.active {
-	color: #121212;
-}
-#stage {
-	width: 720px;
-}
-#container {
-	display:block;
-	overflow:hidden;
-	width: 720px;
-	margin:0 auto;
-}
-#container li {
-	float: left;
-	height: 180px;
-	list-style: none outside none;
-	margin: 20px;
-	position: relative;
-	width: 200px;
-}
-#container li p {
-	margin-left: 0px;
-}
-#container li h6 {
-	padding-top: 5px;
-	font-weight: bold;
-	margin-left: 0px;
-}
-#container li a:hover {
-	color: #121212;
-}
-#container ul {
-	overflow:hidden;
-}
-#container ul.hidden {
-	display:none;
-}
-/******************************************************************
-This CSS is for the project page
-******************************************************************/
-#project-title {
-	display: block;
-	font-family: Verdana, Arial, sans-serif;
-	line-height: 1.6em;
-	color: #666;
-	text-decoration: none;
-	font-size: 18pt;
-	float: right;
-	padding-top: 10px;
-}
-.project {
-	padding-top: 50px;
-	width: 720px;
-}
-#description {
-	padding-bottom: 20px;
-	float: left;
-	width: 480px;
-}
-#work {
-	margin-top: 15px;
-	border-left: 1px;
-	border-style: solid;
-	border-color: #c9c9c9;
-	float: right;
-	padding-left: 40px;
-}
-#work h5 {
-	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
-}
-#work li {
-	font-family: 'Droid Sans', Verdana, Arial, sans-serif;
-	line-height: 1.6em;
-	text-decoration: none;
-	font-size: 9pt;
-	color: #666;
-	background-image: url(../images/check.png);
-	background-position: left center;
-	background-repeat: no-repeat;
-	padding-left: 20px;
-	padding-top: 2px;
-}
-.project-summary {
-	clear: both;
-	width: 720px;
-	padding-right: 10px;
-	padding-top: 60px;
-	text-align: left;
-}
-.project-summary h5 {
-	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
-}
-/******************************************************************
-Blog CSS
-******************************************************************/
-
-#blog {
-	display: block;
-	width: 720px;
-	margin-top: 10px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 100px;
-}
-.blog-item-info {
-	padding: 10px 0 15px 0;
-	height: 15px;
-	width: 400px;
-	float: right;
-}
-.blog-item {
-	clear: both;
-	width: 720px;
-	height: 270px;
-}
-.blog-item-content {
-	width: 400px;
-	margin-top: 0px;
-	margin-left: 15px;
-	margin-bottom: 50px;
-	float: right;
-}
-.blog-item img {
-	margin-bottom: 50px;
-	float: left;
-}
-.blog-item-content h5 {
-	font-weight: bold;
-}
-.blog-item-content p {
-	padding: 0px 5px 5px 0px;
-	text-align: justify;
-}
-#blog .readmore {
-	float: left;
-	padding-top: 20px;
-}
-.user {
-	background-image: url(../images/user.png);
-	background-position: 0 1px;
-	padding-bottom: 1px;
-	margin-right: 15px;
-	display: inline;
-	text-decoration: none;
-	font-size: 12px;
-	height: 15px;
-	color: #d6d6d6;
-	padding-left: 20px;
-	background-repeat: no-repeat
-}
-.user:hover {
-	background-position: 0 -17px;
-	color: #444444;
-}
-.comments {
-	background-image: url(../images/comments.png);
-	background-position: 0 1px;
-	padding-bottom: 1px;
-	margin-right: 15px;
-	display: inline;
-	text-decoration: none;
-	font-size: 12px;
-	height: 15px;
-	color: #d6d6d6;
-	padding-left: 20px;
-	background-repeat: no-repeat
-}
-.comments:hover {
-	background-position: 0 -17px;
-	color: #444444;
-}
-.tags {
-	background-image: url(../images/tags.png);
-	background-position: 0 1px;
-	padding-bottom: 1px;
-	margin-right: 15px;
-	display: inline;
-	text-decoration: none;
-	font-size: 12px;
-	height: 15px;
-	color: #d6d6d6;
-	padding-left: 20px;
-	background-repeat: no-repeat
-}
-.tags:hover {
-	background-position: 0 -17px;
-	color: #444444;
-}
-#pagination {
-	display: inline-block;
-	height: 8px;
-	text-align: center;
-	width: 720px;
-	font-size: 10pt;
-}
-#pagination a {
-	color: #707070;
-	text-decoration: none;
-}
-#pagination .active {
-	color: #444444;
-	text-decoration: underline;
-}
-.blog-item-single-info {
-	padding: 5px 0 20px 0;
-	height: 15px;
-	width: 720px;
-}
-.blog-item-single {
-	clear: both;
-	width: 720px;
-	height: 270px;
-}
-.blog-item-single-content {
-	width: 720px;
-	margin-top: 10px;
-	margin-bottom: 50px;
-}
-.blog-item-single img {
-	margin-bottom: 10px;
-}
-.blog-item-single-content h5 {
-	font-weight: bold;
-}
-.blog-item-single-content p {
-	text-align: left;
-	padding-bottom: 20px;
-}
-.social-blog-buttons {
-	display: inline;
-	float: left;
-	height: 20px;
-}
-.comments-block {
-	width: 720px;
-}
-.comments-title {
-	padding-top: 40px;
-}
-.comments-block a {
-	width: 720px;
-}
-.avatar {
-	padding-top: 6px;
-	float: left;
-	width: 40px;
-}
-.post-author {
-	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
-	line-height: 1.6em;
-	color: #454544;
-	text-decoration: none;
-	font-size: 14pt;
-	cursor: pointer;
-}
-.comment-info {
-	width: 400px;
-	display: block;
-	padding-left: 60px;
-}
-.comment-body {
-	padding-top: 15px;
-}
-.reply {
-	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
-	line-height: 1.6em;
-	color: #454544;
-	text-decoration: none;
-	font-size: 10pt;
-}
-.required-comment {
-	padding-bottom: 20px;
-}
-.short-label {
-	width: 40px;
-}
-.input-block {
-	width: 180px;
-	padding-right: 65px;
-	height: 50px;
-	display: inline-block;
-}
-.input-block-long {
-	width: 140px;
-	display: inline-block;
-}
-.short-field {
-	width: 170px;
-}
-.long-field {
-	width: 200px;
-}
-#comment {
-	width: 700px;
-}
-#comment-button {
-	height: 30px;
-	padding: 5px;
-}
-/***************************************************
-Contact CSS
-***************************************************/
-
-#contact {
-	display: inline;
-	position: relative;
-	width: 450px;
-	float: left;
-	margin: 0px;
-	margin-top: 20px;
-	margin-bottom: 40px;
-	padding: 20px 70px 20px 0px;
-	;
-	border-right: 1px;
-	border-style: solid;
-	border-color: #d6d6d6;
-}
-#contactform {
-	padding-top: 10px;
-}
-#contact p {
-	padding-top: 5px;
-}
-#contactform h6 {
-	font-size: 12px;
-	color: #848484;
-	float: left;
-}
-#contactform .boxes {
-	float: left;
-	display: block;
-	margin-bottom: 20px;
-	margin-top: 20px;
-}
-#contactform .box {
-	width: 390px;
-	margin-bottom: 18px;
-	margin-top: 2px;
-	margin-left: 60px;
-}
-#contactform .msgbox {
-	margin-bottom: 18px;
-	margin-top: 2px;
-	margin-left: 60px;
-	width: 400px;
-}
-#contactform .message {
-	text-align: left;
-	margin-top: 2px;
-	height: 135px;
-	width: 400px;
-	padding: 5px;
-}
-#contactform #sender_name {
-	width: 320px;
-}
-#contactform #sender_email {
-	width: 320px;
-}
-#contactform #sender_url {
-	width: 320px;
-}
-#contactform .submitbtn {
-	width: 120px;
-	padding-top: 15px;
-	margin-left: 60px;
-}
-.contactinformation .overline {
-	margin-bottom: 15px;
-}
-#contactinfo {
-	padding-right: 10px;
-	padding-top: 80px;
-	float: right;
-}
 /******************************************************************
 This is the buttons and inputs CSS
 ******************************************************************/
@@ -1080,96 +536,4 @@ input:focus, textarea:focus, button:hover {
 input:focus, textarea:focus {
 	color: #c9c9c9;
 }
-/******************************************************************
-This is the CSS for the social links
-******************************************************************/
 
-#social {
-	display: inline;
-	float: right;
-}
-.dribbble a {
-	background-image: url(../images/dribbble.png);
-	background-position: 0 1px;
-	padding-bottom: 1px;
-	margin-bottom: 8px;
-	text-decoration: none;
-	font-size: 12px;
-	display: block;
-	height: 15px;
-	color: #727272;
-	padding-left: 20px;
-	background-repeat: no-repeat
-}
-.dribbble a:hover {
-	background-position: 0 -17px;
-	color: #444444;
-}
-.forrst a {
-	background-image: url(../images/forrst.png);
-	background-position: 0 1px;
-	padding-bottom: 1px;
-	margin-bottom: 8px;
-	text-decoration: none;
-	font-size: 12px;
-	display: block;
-	height: 15px;
-	color: #727272;
-	padding-left: 20px;
-	background-repeat: no-repeat
-}
-.forrst a:hover {
-	background-position: 0 -17px;
-	color: #444444;
-}
-.google a {
-	background-image: url(../images/google.png);
-	background-position: 0 1px;
-	padding-bottom: 1px;
-	margin-bottom: 8px;
-	text-decoration: none;
-	font-size: 12px;
-	display: block;
-	height: 15px;
-	color: #727272;
-	padding-left: 20px;
-	background-repeat: no-repeat
-}
-.google a:hover {
-	background-position: 0 -17px;
-	color: #444444;
-}
-.twitter_small a {
-	background-image: url(../images/twitter_small.png);
-	background-position: 0 1px;
-	padding-bottom: 1px;
-	margin-bottom: 8px;
-	text-decoration: none;
-	font-size: 12px;
-	display: block;
-	height: 15px;
-	color: #727272;
-	padding-left: 20px;
-	background-repeat: no-repeat
-}
-.twitter_small a:hover {
-	background-position: 0 -17px;
-	color: #444444;
-}
-.facebook_small a {
-	background-image: url(../images/facebook_small.png);
-	background-position: 0 1px;
-	padding-bottom: 1px;
-	margin-bottom: 8px;
-	text-decoration: none;
-	font-size: 12px;
-	display: block;
-	height: 15px;
-	color: #727272;
-	padding-left: 20px;
-	background-repeat: no-repeat
-}
-.facebook_small a:hover {
-	background-position: 0 -17px;
-	color: #444444;
-}
