--- a/css/style.css
+++ b/css/style.css
@@ -349,10 +349,11 @@ Header & Menu CSS
 	padding-top: 50px;
 	float: left;
 	width: 200px;
+	word-wrap: break-word;
 }
 #main-menu {
 	position: fixed;
-	padding-top: 20px;
+	padding-top: 10px;
 	padding-left: 20px;
 	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
 	word-wrap: break-word;
