--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ General CSS
 	padding-top: 20px;
 	margin-left: 250px;
 	z-index: 1;
-	float: left;
+	float: right;
 }
 p {
 	font-family: Verdana, Arial, sans-serif;
