--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,7 @@ Header & Menu CSS
 	overflow-y: scroll;
 	top: 0;
   	bottom: 0;
+	overflow-wrap: break-word;
 	word-wrap: break-word;
 }
 #main-menu a {
