--- a/css/style.css
+++ b/css/style.css
@@ -348,13 +348,14 @@ Header & Menu CSS
 	height: 100%;
 	padding-top: 50px;
 	float: left;
-	width: 140px;
+	width: 200px;
 }
 #main-menu {
 	position: fixed;
-	width: 140px;
+	width: 170px;
 	padding-top: 80px;
 	padding-left: 20px;
+	padding-bottom: 20px;
 	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
 	overflow-y: scroll;
 	top: 0;
