--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,43 @@ a {
 	color: #E095B4;
 	outline: none;
 }
+
+/******************************************************************
+Import fonts
+******************************************************************/
+
+@font-face {
+    font-family: Apud-Black;
+    src: url("../../waeehdashdemo/DSType - Apud-Black.otf") format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: Apud-Roman;
+    src: url("../../waeehdashdemo/DSType - Apud-Roman.otf") format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+
+
+@font-face {
+    font-family: Apud-Medium;
+    src: url("../../waeehdashdemo/DSType - Apud-Medium.otf") format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Apud-BoldItalic;
+    src: url("../../waeehdashdemo/DSType - Apud-BoldItalic.otf") format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+
 /******************************************************************
 General CSS
 ******************************************************************/
@@ -77,48 +114,48 @@ General CSS
 	z-index: 1;
 }
 p {
-	font-family: Verdana, Arial, sans-serif;
+	font-family: Apud-Roman;
 	line-height: 1.5em;
 	color: #848484;
 	font-size: 8pt;
 }
 h1 {
-	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
+	font-family: 'Droid Serif', Apud-Black, sans-serif;
 	line-height: 1.5em;
 	color: #454544;
 	text-decoration: none;
 	font-size: 22pt;
 }
 h2 {
-	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
+	font-family: 'Droid Serif', Apud-Medium, sans-serif;
 	line-height: 1.5em;
 	color: #454544;
 	text-decoration: none;
 	font-size: 18pt;
 }
 h3 {
-	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
+	font-family: 'Droid Serif',Apud-Black, sans-serif;
 	line-height: 1.5em;
 	color: #454544;
 	text-decoration: none;
 	font-size: 16pt;
 }
 h4 {
-	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
+	font-family: 'Droid Serif', Apud-Black, sans-serif;
 	line-height: 1.5em;
 	color: #454544;
 	text-decoration: none;
 	font-size: 14pt;
 }
 h5 {
-	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
+	font-family: 'Droid Serif', Apud-Black, sans-serif;
 	line-height: 1.5em;
 	color: #454544;
 	text-decoration: none;
 	font-size: 11pt;
 }
 h6 {
-	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
+	font-family: 'Droid Serif', Apud-Black, sans-serif;
 	line-height: 1.5em;
 	color: #454544;
 	text-decoration: none;
@@ -189,7 +226,7 @@ Header & Menu CSS
 	padding-left: 20px;
 	padding-left: 20px;
 	padding-right: 30px;
-	font-family: 'Droid Serif', Verdana, Arial, sans-serif;
+	font-family: 'Droid Serif', Apud-Medium, sans-serif;
 	overflow-y: scroll;
 	top: 0;
   	bottom: 0;
