--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ Import fonts
 
 @font-face {
     font-family: Apud-Black;
-    src: url("./DSType - Apud-Black.otf") format('truetype');
+    src: url("../DSType - Apud-Black.otf") format('truetype');
     font-weight: bold;
     font-style: normal;
 }
@@ -81,7 +81,7 @@ Import fonts
 
 @font-face {
     font-family: Apud-Roman;
-    src: url("./DSType - Apud-Roman.otf") format('truetype');
+    src: url("../DSType - Apud-Roman.otf") format('truetype');
     font-style: normal;
 }
 
@@ -89,13 +89,13 @@ Import fonts
 
 @font-face {
     font-family: Apud-Medium;
-    src: url("./DSType - Apud-Medium.otf") format('truetype');
+    src: url("../DSType - Apud-Medium.otf") format('truetype');
     font-style: normal;
 }
 
 @font-face {
     font-family: Apud-BoldItalic;
-    src: url("./DSType - Apud-BoldItalic.otf") format('truetype');
+    src: url("../DSType - Apud-BoldItalic.otf") format('truetype');
     font-weight: bold;
     font-style: normal;
 }
