--- a/css/style.css
+++ b/css/style.css
@@ -365,19 +365,18 @@ Blockquote
 
 .blockquote{
   font-size: 1.4em;
-  width:30%;
+  width:40%;
   margin:50px auto;
   font-style:italic;
   color: #555555;
   padding:1.2em 30px 1.2em 75px;
-  border-left:8px solid #78C0A8 ;
+  border-left:5px solid #005BAA ;
   line-height:1.6;
   position: relative;
   background:#EDEDED;
 }
 
 .blockquote::before{
-  color:#005BAA;
   font-size:4em;
   position: absolute;
   left: 10px;
