--- a/css/style.css
+++ b/css/style.css
@@ -369,7 +369,7 @@ Blockquote
   margin:50px auto;
   font-style:italic;
   color: #555555;
-  padding:1.2em 30px 1.2em 75px;
+  padding:20px 30px 20px 75px;
   border-left:5px solid #005BAA ;
   line-height:1.6;
   position: relative;
