--- a/css/style.css
+++ b/css/style.css
@@ -398,7 +398,7 @@ Blockquote
 Tables
 ******************************************************************/
 
-.styled-table {
+.table {
     border-collapse: collapse;
     margin: 25px 0;
     font-size: 0.9em;
@@ -407,26 +407,26 @@ Tables
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
-.styled-table thead tr {
+.table thead tr {
     background-color: #005BAA;
     color: #ffffff;
     text-align: left;
 }
 
-.styled-table th,
-.styled-table td {
+.table th,
+.table td {
     padding: 12px 15px;
 }
 
-.styled-table tbody tr {
+.table tbody tr {
     border-bottom: 1px solid #dddddd;
 }
 
-.styled-table tbody tr:nth-of-type(even) {
+.table tbody tr:nth-of-type(even) {
     background-color: #f3f3f3;
 }
 
-.styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
+.table tbody tr:last-of-type {
+    border-bottom: 2px solid #b5b5b5;
 }
 
