--- a/css/style.css
+++ b/css/style.css
@@ -134,42 +134,42 @@ p {
 h1 {
 	font-family: 'Droid Serif', Apud-Black, sans-serif;
 	line-height: 1.5em;
-	color: #454544;
+	color: #25408F;
 	text-decoration: none;
 	font-size: 22pt;
 }
 h2 {
 	font-family: 'Droid Serif', Apud-BoldItalic, sans-serif;
 	line-height: 1.5em;
-	color: #454544;
+	color: #25408F;
 	text-decoration: none;
 	font-size: 18pt;
 }
 h3 {
 	font-family: 'Droid Serif',Apud-Medium, sans-serif;
 	line-height: 1.5em;
-	color: #454544;
+	color: #25408F;
 	text-decoration: none;
 	font-size: 16pt;
 }
 h4 {
 	font-family: 'Droid Serif', Apud-Medium, sans-serif;
 	line-height: 1.5em;
-	color: #454544;
+	color: #25408F;
 	text-decoration: none;
 	font-size: 14pt;
 }
 h5 {
 	font-family: 'Droid Serif', Apud-Medium, sans-serif;
 	line-height: 1.5em;
-	color: #454544;
+	color: #25408F;
 	text-decoration: none;
 	font-size: 11pt;
 }
 h6 {
 	font-family: 'Droid Serif', Apud-Medium, sans-serif;
 	line-height: 1.5em;
-	color: #454544;
+	color: #25408F;
 	text-decoration: none;
 	font-size: 10pt;
 }
