--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ Tables
 
 .table {
     border-collapse: collapse;
-    margin: 25px 0;
+    margin: 30px 30px;
     font-size: 0.9em;
     font-family: Apud-Roman;
     min-width: 400px;
