--- a/css/style.css
+++ b/css/style.css
@@ -402,13 +402,13 @@ table {
     border-collapse: collapse;
     margin: 30px 30px;
     font-size: 0.9em;
-    min-width: 400px;
+    min-width: 500px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 table thead tr {
     background-color: #005BAA;
-    color: #ffffff !important;
+    font-color: #ffffff;
 }
 
 table th,
