--- a/css/style.css
+++ b/css/style.css
@@ -408,7 +408,7 @@ table {
 
 table thead tr {
     background-color: #005BAA;
-    font-color: #ffffff;
+    color: #ffffff !important;
 }
 
 table th,
