--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,33 +6,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	font: inherit;
 	vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
 
-ol, ul {
-	list-style: none;
-}
-
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after, q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-.toc-list, .toc-list ol {
-  list-style-type: none;
-}
 
 
 #content {
@@ -99,7 +73,7 @@ table {
 }
 
 table thead tr {
-    background-color: #71dbcb;
+    background-color: #f6f6f6;
     color: #ffffff;
 }
 
