--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,68 +1,3 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-
-
-
-#content {
-	width: 900px;
-	padding-top: 20px;
-	margin-left: 260px;
-	z-index: 1;
-}
-p {
-	font-family: Apud-Roman;
-	line-height: 1.5em;
-	color: #000000;
-	font-size: 11pt;
-}
-h1 {
-	font-family: 'Droid Serif', Apud-Black, sans-serif;
-	line-height: 1.5em;
-	color: #25408F;
-	text-decoration: none;
-	font-size: 22pt;
-}
-h2 {
-	font-family: 'Droid Serif', Apud-BoldItalic, sans-serif;
-	line-height: 1.5em;
-	color: #25408F;
-	text-decoration: none;
-	font-size: 18pt;
-}
-h3 {
-	font-family: 'Droid Serif',Apud-Medium, sans-serif;
-	line-height: 1.5em;
-	color: #25408F;
-	text-decoration: none;
-	font-size: 16pt;
-}
-h4 {
-	font-family: 'Droid Serif', Apud-Medium, sans-serif;
-	line-height: 1.5em;
-	color: #25408F;
-	text-decoration: none;
-	font-size: 14pt;
-}
-h5 {
-	font-family: 'Droid Serif', Apud-Medium, sans-serif;
-	line-height: 1.5em;
-	color: #25408F;
-	text-decoration: none;
-	font-size: 11pt;
-}
-h6 {
-	font-family: 'Droid Serif', Apud-Medium, sans-serif;
-	line-height: 1.5em;
-	color: #25408F;
-	text-decoration: none;
-	font-size: 10pt;
-}
 
 table {
     border-collapse: collapse;
@@ -73,7 +8,7 @@ table {
 }
 
 table thead tr {
-    background-color: #f6f6f6;
+    background-color: #7e3b3b;
     color: #ffffff;
 }
 
