--- a/css/style.css
+++ b/css/style.css
@@ -302,6 +302,7 @@ table {
     border-collapse: collapse;
     margin: 30px 30px;
     font-size: 0.9em;
+    font-face:Apud-Roman;
     min-width: 650px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
@@ -309,6 +310,7 @@ table {
 table thead tr {
     background-color: #005BAA;
     color: #ffffff;
+    font-weight:bold;
 }
 
 table th,
