--- a/css/style.css
+++ b/css/style.css
@@ -305,6 +305,7 @@ table {
     font-face:Apud-Roman;
     min-width: 650px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    line-height: 1.6;
 }
 
 table thead tr {
