--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,25 +10,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	font: inherit;
 	vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-
-ol, ul {
-	list-style: none;
-}
-
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after, q:before, q:after {
-	content: '';
-	content: none;
-}
 
 
 
@@ -96,7 +77,7 @@ table {
 }
 
 table thead tr {
-    background-color: #000000;
+    background-color: #FFFFFF;
     color: #ffffff;
 }
 
