--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,15 +1,4 @@
-								
-/******************************************************************
-This is the CSS Reset
-******************************************************************/
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
+
 
 
 
@@ -77,7 +66,7 @@ table {
 }
 
 table thead tr {
-    background-color: #FFFFFF;
+    background-color: #000000;
     color: #ffffff;
 }
 
