--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ table {
     border-collapse: collapse;
     margin: 30px 30px;
     font-size: 0.9em;
-    font-face:Apud-Roman;
+    font-family: Apud-Roman;
     min-width: 650px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
     line-height: 1.6;
