--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ Blockquote
 /******************************************************************
 Tables
 ******************************************************************/
-table {
+.styled-table {
     border-collapse: collapse;
     margin: 30px 30px;
     font-size: 0.9em;
@@ -307,26 +307,26 @@ table {
     line-height: 1.6;
 }
 
-table thead tr {
+.styled-table thead tr {
     background-color: #005BAA;
     color: #ffffff;
     font-weight:bold;
 }
 
-table th,
-table td {
+.styled-table th,
+.styled-table td {
     padding: 12px 15px;
 }
 
-table tbody tr {
+.styled-table tbody tr {
     border-bottom: 1px solid #dddddd;
 }
 
-table tbody tr:nth-of-type(even) {
+.styled-table tbody tr:nth-of-type(even) {
     background-color: #f3f3f3;
 }
 
-table tbody tr:last-of-type {
+.styled-table tbody tr:last-of-type {
     border-bottom: 2px solid #b5b5b5;
 }
 
