--- a/css/style.css
+++ b/css/style.css
@@ -189,8 +189,8 @@ Menu CSS
 	padding-left: 20px;
 	padding-right: 30px;
 	border-right: solid;
-	border-color: #d7d7d7
-	background-color: #F3F3F3
+	border-color: #D7D7D7;
+	background-color: #F3F3F3;
 	font-family: 'Droid Serif', Apud-Medium, sans-serif;
 	overflow-y: scroll;
 	top: 0;
