--- a/css/style.css
+++ b/css/style.css
@@ -133,42 +133,42 @@ p {
 h1 {
 	font-family: 'Droid Serif', Apud-Black, sans-serif;
 	line-height: 1.5em;
-	color: #25408F;
+	color: #b22525;
 	text-decoration: none;
 	font-size: 22pt;
 }
 h2 {
 	font-family: 'Droid Serif', Apud-Black, sans-serif;
 	line-height: 1.5em;
-	color: #25408F;
+	color: #b22525;
 	text-decoration: none;
 	font-size: 16pt;
 }
 h3 {
 	font-family: 'Droid Serif',Apud-BoldItalic, sans-serif;
 	line-height: 1.5em;
-	color: #25408F;
+	color: #b22525;
 	text-decoration: none;
 	font-size: 14pt;
 }
 h4 {
 	font-family: 'Droid Serif', Apud-Medium, sans-serif;
 	line-height: 1.5em;
-	color: #25408F;
+	color: #1c1a1a;
 	text-decoration: none;
 	font-size: 13pt;
 }
 h5 {
 	font-family: 'Droid Serif', Apud-Medium, sans-serif;
 	line-height: 1.5em;
-	color: #25408F;
+	color: #1c1a1aF;
 	text-decoration: none;
 	font-size: 11pt;
 }
 h6 {
 	font-family: 'Droid Serif', Apud-Medium, sans-serif;
 	line-height: 1.5em;
-	color: #25408F;
+	color: #1c1a1a;
 	text-decoration: none;
 	font-size: 10pt;
 }
@@ -309,7 +309,7 @@ Tables and graphs
 }
 
 .styled-table thead tr {
-    background-color: #005BAA;
+    background-color: #b22525;
     color: #ffffff;
     font-weight:bold;
 }
