--- a/css/style.css
+++ b/css/style.css
@@ -304,8 +304,8 @@ table {
 }
 
 table thead {
-	border-top:1px;
-	border-bottom:1px;
+	border-top:1px solid;
+	border-bottom:1px solid;
 	border-color: #bcbcbc;
 }
 
