--- a/css/style.css
+++ b/css/style.css
@@ -307,10 +307,15 @@ table thead {
 	border-top:1px solid;
 	border-bottom:1px solid;
 	border-color: #bcbcbc;
+	font-weight:bold;
 }
 
 table tbody tr:last-of-type {
     border-bottom: 1px solid #bcbcbc;
+}
+
+table th, table td {
+	 padding: 12px 15px
 }
 
 .styled-table {
