--- a/css/style.css
+++ b/css/style.css
@@ -303,6 +303,11 @@ table {
 	width:80%;
 }
 
+table th, table td {
+	 padding: 12px 15px
+}
+
+
 table thead {
 	border-top:1px solid;
 	border-bottom:1px solid;
@@ -314,9 +319,11 @@ table tbody tr:last-of-type {
     border-bottom: 1px solid #bcbcbc;
 }
 
-table th, table td {
-	 padding: 12px 15px
+table tfoot {
+	font-size:"6px";
 }
+
+
 
 .styled-table {
     border-collapse: collapse;
