--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,8 @@ h6 {
 	text-decoration: none;
 	font-size: 10pt;
 }
+
+sup {font-size:xx-small; vertical-align:super;}
 /******************************************************************
 Menu CSS
 ******************************************************************/
