--- a/css/style.css
+++ b/css/style.css
@@ -380,7 +380,7 @@ table tbody tr:hover td[rowspan]:hover ~ td {
 
 header-table {
 	width:100%;
-	table-layout: fixed;
+	border-style:none;
 }
 	
 
