--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,28 @@ table tbody tr:hover td[rowspan]:hover ~ td {
 }
 
 
+.styled-table tbody tfoot thead tr th td {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
+.header-table tbody tfoot thead tr th td {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
+
+
 .styled-table {
     border-collapse: collapse;
     margin: 30px 30px;
