--- a/css/style.css
+++ b/css/style.css
@@ -308,54 +308,33 @@ Blockquote
 Tables and graphs
 ******************************************************************/
 
-table {
+.normal-table {
 	width:90%;
 	margin: 30px 30px;
 }
 
-table td {
+.normal-table td {
 	 padding: 5px;
 }
 
 
-table thead {
+.normal-table thead {
 	border-top:1px solid;
 	border-bottom:1px solid;
 	border-color: #bcbcbc;
 	font-weight:bold;
 }
 
-table tbody tr:last-of-type {
+.normal-table tbody tr:last-of-type {
     border-bottom: 1px solid #bcbcbc;
 }
 
-table tbody tr:hover td:not(
+.normal-table tbody tr:hover td:not(
 [rowspan]) {background: #f3f3f3
 }
 
-table tbody tr:hover td[rowspan]:hover ~ td {
+.normal-table tbody tr:hover td[rowspan]:hover ~ td {
 	background: none;
-}
-
-
-.styled-table tbody tfoot thead tr th td {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
-}
-
-.header-table tbody tfoot thead tr th td {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
 }
 
 
