--- a/css/style.css
+++ b/css/style.css
@@ -307,10 +307,27 @@ Blockquote
 /******************************************************************
 Tables and graphs
 ******************************************************************/
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
 
 .normal-table {
 	width:90%;
 	margin: 30px 30px;
+	display:none;
 }
 
 .normal-table td {
