--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,308 +1,22 @@
-/******************************************************************
-*******************************************************************
-
-Template Name: Effe
-Theme URI: http://www.92five.net
-Description: Personal Blog
-Author: 92five
-Author URI: http://www.92five.net
-Version: 1.0
-							
-Designed & Handcrafted by 92five for 92five.net
-									
-*******************************************************************
-******************************************************************/
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+.collapsible {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
 }
 
-
-
-.toc-list, .toc-list ol {
-  list-style-type: none;
+.active, .collapsible:hover {
+  background-color: #555;
 }
 
-.toc-list {
-  padding: 0;
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
 }
-
-.toc-list ol {
-  padding-inline-start: 2ch;
-}
-/******************************************************************
-TEXT SELECTION STYLES
-******************************************************************/
-/* Safari, Chrome, iPhones, iPads */
-::selection {
- background:#E095B4;
- color:#fff;
-}
-::-moz-selection {
- background:#E095B4;
- color:#fff;
-}
-::-webkit-selection {
- background:#E095B4;
- color:#fff;
-}
-a {
-	color: #E095B4;
-	outline: none;
-}
-
-/******************************************************************
-Import fonts
-******************************************************************/
-
-@font-face {
-    font-family: Apud-Black;
-    src: url("../font/DSType - Apud-Black.otf") format('truetype');
-    font-weight: bold;
-    font-style: normal;
-}
-
-
-@font-face {
-    font-family: Apud-Roman;
-    src: url("../font/DSType - Apud-Roman.otf") format('truetype');
-    font-style: normal;
-}
-
-
-
-@font-face {
-    font-family: Apud-Medium;
-    src: url("../font/DSType - Apud-Medium.otf") format('truetype');
-    font-style: normal;
-}
-
-@font-face {
-    font-family: Apud-BoldItalic;
-    src: url("../font/DSType - Apud-BoldItalic.otf") format('truetype');
-    font-weight: bold;
-    font-style: normal;
-}
-
-
-/******************************************************************
-General CSS
-******************************************************************/
-									
-#content {
-	width: 900px;
-	padding-top: 20px;
-	margin-left: 260px;
-	z-index: 1;
-}
-p {
-	font-family: Apud-Roman;
-	line-height: 1.5em;
-	color: #000000;
-	font-size: 11pt;
-}
-h1 {
-	font-family: 'Droid Serif', Apud-Black, sans-serif;
-	line-height: 1.5em;
-	color: #25408F;
-	text-decoration: none;
-	font-size: 22pt;
-}
-h2 {
-	font-family: 'Droid Serif', Apud-BoldItalic, sans-serif;
-	line-height: 1.5em;
-	color: #25408F;
-	text-decoration: none;
-	font-size: 18pt;
-}
-h3 {
-	font-family: 'Droid Serif',Apud-Medium, sans-serif;
-	line-height: 1.5em;
-	color: #25408F;
-	text-decoration: none;
-	font-size: 16pt;
-}
-h4 {
-	font-family: 'Droid Serif', Apud-Medium, sans-serif;
-	line-height: 1.5em;
-	color: #25408F;
-	text-decoration: none;
-	font-size: 14pt;
-}
-h5 {
-	font-family: 'Droid Serif', Apud-Medium, sans-serif;
-	line-height: 1.5em;
-	color: #25408F;
-	text-decoration: none;
-	font-size: 11pt;
-}
-h6 {
-	font-family: 'Droid Serif', Apud-Medium, sans-serif;
-	line-height: 1.5em;
-	color: #25408F;
-	text-decoration: none;
-	font-size: 10pt;
-}
-/******************************************************************
-Menu CSS
-******************************************************************/
-#menu-wrapper {
-	height: 100%;
-	padding-top: 50px;
-	float: left;
-	width: 200px;
-}
-#main-menu {
-	position: fixed;
-	width: 200px;
-	padding-top: 80px;
-	padding-left: 20px;
-	padding-left: 20px;
-	padding-right: 30px;
-	font-family: 'Droid Serif', Apud-Medium, sans-serif;
-	overflow-y: scroll;
-	top: 0;
-  	bottom: 0;
-	word-wrap: break-word;
-}
-#main-menu a {
-	color: #707070;
-	text-decoration: none;
-	font-size: 14pt;
-}
-#main-menu a:hover {
-	color: #121212;
-}
-#main-menu li {
-	padding: 2px 0 2px 0;
-}
-#main-menu .selected {
-	color: #121212;
-}
-#footer h6 {
-	font-size: 10px;
-	position: fixed;
-	bottom: 10px;
-	left: 20px;
-}
-
-/******************************************************************
-Some Nivo Customization CSS
-For easy editing (the main Nivo CSS is in nivo-theme.css)
-******************************************************************/
-
-.theme-effe .nivo-caption {
-	font-family: Verdana, Arial, sans-serif;
-	font-size: 14px;
-}
-.theme-effe .nivo-caption h1 {
-	padding: 50px 10px 5px 10px;
-}
-.theme-effe .nivo-caption p {
-	padding: 5px 20px 20px 20px;
-	text-align: justify;
-}
-.theme-effe .nivo-caption .readmore {
-	position: absolute;
-	font-family: Verdana, Arial, sans-serif;
-	font-size: 16px;
-	color: #999;
-	text-decoration: none;
-	bottom: 20px;
-	left: 160px;
-}
-
-/******************************************************************
-Dividers
-******************************************************************/
-.spacer {
-	height: 1px;
-	clear: both;
-	border-bottom: 1px;
-	border-style: solid;
-	border-color: #d6d6d6;
-	margin: 20px 5px 20px 5px;
-}
-.blank-spacer {
-	height: 1px;
-	clear: both;
-	margin: 10px 5px 10px 5px;
-	padding: 10px 5px 10px 5px;
-}
-
-/******************************************************************
-Blockquote
-******************************************************************/
-
-.blockquote{
-  font-size: 1.4em;
-  width:70%;
-  margin:20px;
-  font-style:italic;
-  color: #555555;
-  padding:20px 30px 20px 30px;
-  border-left:5px solid #005BAA ;
-  line-height:1.6;
-  position: relative;
-  background:#EDEDED;
-}
-
-.blockquote::before{
-  position: absolute;
-  left: 5px;
-  top:-10px;
-}
-
-.blockquote::after{
-  content: '';
-}
-
-.blockquote span{
-  display:block;
-  color:#333333;
-  font-style: normal;
-  font-weight: bold;
-  margin-top:1em;
-}
-
-/******************************************************************
-Tables
-******************************************************************/
-table {
-    border-collapse: collapse;
-    margin: 30px 30px;
-    font-size: 0.9em;
-    font-family: Apud-Roman;
-    min-width: 650px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    line-height: 1.6;
-}
-
-table thead tr {
-    background-color: #005BAA;
-    color: #ffffff;
-    font-weight:bold;
-}
-
-table th,
-table td {
-    padding: 12px 15px;
-}
-
-table tbody tr {
-    border-bottom: 1px solid #dddddd;
-}
-
-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
-
-table tbody tr:last-of-type {
-    border-bottom: 2px solid #b5b5b5;
-}
-
-
