--- a/css/style.css
+++ b/css/style.css
@@ -307,25 +307,42 @@ Blockquote
 /******************************************************************
 Tables and graphs
 ******************************************************************/
+.collapsible {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #555;
+}
 
 .normal-table {
 	width:90%;
-	margin: 30px 30px;
+	margin: 20px 20px;
 }
 
-.normal-table td {
+.normal-table th {
 	 padding: 5px;
 }
 
 
-.normal-table thead {
+.normal-table thead th {
 	border-top:1px solid;
 	border-bottom:1px solid;
 	border-color: #bcbcbc;
 	font-weight:bold;
+	text-align: left;
+
 }
 
-.normal-table tbody tr:last-of-type {
+.normal-table tfoot td:first-of-type {
     border-bottom: 1px solid #bcbcbc;
 }
 
@@ -336,7 +353,6 @@ Tables and graphs
 .normal-table tbody tr:hover td[rowspan]:hover ~ td {
 	background: none;
 }
-
 
 
 .styled-table {
