--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,7 @@ Tables and graphs
 }
 
 .normal-table tfoot td:first-of-type {
-    border-bottom: 1px solid #bcbcbc;
+    border-top: 1px solid #bcbcbc;
 }
 
 .normal-table tbody tr:hover td:not(
