--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ Tables and graphs
 }
 
 
-.normal-table thead th {
+.normal-table thead {
 	border-top:1px solid;
 	border-bottom:1px solid;
 	border-color: #bcbcbc;
