--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,11 @@ Tables and graphs
   text-align: left;
   outline: none;
   font-size: 15px;
+  font-color: #FFFFFF;
+  font-family: 'Droid Serif', Apud-Medium, sans-serif;
+
+  
+	
 }
 
 .active, .collapsible:hover {
