--- a/css/style.css
+++ b/css/style.css
@@ -334,6 +334,18 @@ Tables and graphs
   background-color: #555;
 }
 
+.collapsible:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: white;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
 .normal-table {
 	width:90%;
 	margin: 20px 20px;
