--- a/css/style.css
+++ b/css/style.css
@@ -438,6 +438,7 @@ Tabs
   overflow: hidden;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
+  margin-left: 50px;
 }
 
 /* Style the buttons that are used to open the tab content */
