--- a/css/style.css
+++ b/css/style.css
@@ -423,6 +423,7 @@ Tables and graphs
 }
 
 .tableauPlaceholder {	z-index: 1;
+	margin:20px;
 }
 
 .header-table {
@@ -438,7 +439,7 @@ Tabs
   overflow: hidden;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
-  margin-left: 50px;
+  margin-left: 20px;
 }
 
 /* Style the buttons that are used to open the tab content */
