--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ General CSS
 
 .collapse-content {
   overflow: hidden;
+	display:none;
 
 }
 
@@ -465,5 +466,9 @@ Tabs
 
 .tab button:after {
    content: none;
+}
+
+.tabcontent {
+   display: none;
 }
 
